--- a/chars_book/侦查系.html
+++ b/chars_book/侦查系.html
@@ -258,7 +258,12 @@
 <ul>
 <li>击倒后起身最高85%的概率规避各种攻击3秒，像一只泥鳅一样根本逮不住，如果没有100%的规避克制（热破，阿尔茜），平时不要随意放倒路障。而玩家的路障被击倒后，则要利用好这3秒的规避和6~7秒的暴击率提升大举反扑。</li>
 <li>近战攻击根据对手能量提升79-144%的暴击伤害</li>
-<li>远程小枪有20%的概率施加逆火，S1能100%施加，但是可能是游戏商的疏忽，一直没有像蝎子那样写清逆火伤害到底是多少。</li>
+<li>逆火，在爵士和蝎子出来之前这是路障最有特色的技能：远程小枪有<del>20%</del>25%的概率施加逆火，S1能100%施加
+<ul>
+<li>但是可能是游戏商的疏忽，一直没有像蝎子那样写清逆火伤害到底是多少</li>
+<li>路障逆火的能力在惊天雷出来前一直不算一种debuff，结果惊天雷净化不了。新人物不能碾压旧人物那还了得？于是厂商改成了可以净化。</li>
+<li>这样又不可避免伤害了<del>本来就为数不多的</del>路障玩家们的感情，于是厂商提升到了25%的概率并且增加了一种特性：<strong>连续堆上三层逆火后，会转化为“半永久”逆火</strong>，也就是路障只要不被击倒，那个逆火图标就没有过期时间（颜色比普通逆火图标要深一点），也不能被净化。</li>
+</ul></li>
 <li>S2除了伤害挺高还能偷取对方最多36%的能量，注意和警车的消气不同，路障偷过来的能量是加给自己，使用得法的话路障可以反复获得多个S2。</li>
 <li>S3在25秒内提升25%的暴击率。</li>
 </ul>
