--- a/chars_book/对战ai策略.html
+++ b/chars_book/对战ai策略.html
@@ -288,7 +288,7 @@
 <div id="对战ai斗士铁皮" class="section level3 hasAnchor" number="10.2.8">
 <h3><span class="header-section-number">10.2.8</span> 对战AI斗士铁皮<a href="对战ai策略.html#对战ai斗士铁皮" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>目前主要是在铁皮第一次登场的特殊事件中跟他对战。但是因为有回血和不稳定能量晶体这样的变态模块，很多时候不能按自己的意思来练。除了发现他的护甲挨打的时候上来的很快之外，也发现他对DOT没有什么办法。另外特殊技不好躲，见特殊技躲法。</p>
-<p><strong>S1：后，后，后；S2：侧，侧，后</strong>。S1因为老铁比较磨叽，所以要掌握好节奏，而且第二发的霰弹枪虽然没有警车那样飞全屏，但是实际闪起来总是感觉判定时间比较长，建议连续后闪两下拉开距离，这样最后那一拳就不用闪了。S2闪掉前两发记得第三发是侧闪，只要不打中是不会出霸体的。</p>
+<p><strong>S1：后，后，后；S2：后，后，侧</strong>。S1因为老铁比较磨叽，所以要掌握好节奏，而且第二发的霰弹枪虽然没有警车那样飞全屏，但是实际闪起来总是感觉判定时间比较长，建议连续后闪两下拉开距离，这样最后那一拳就不用闪了。S2闪掉前两发记得第三发是侧闪，只要不打中是不会出霸体的。</p>
 </div>
 </div>
 <div id="战士系-1" class="section level2 hasAnchor" number="10.3">
@@ -310,7 +310,7 @@
 </div>
 <div id="对战ai阿尔茜" class="section level3 hasAnchor" number="10.3.3">
 <h3><span class="header-section-number">10.3.3</span> 对战AI阿尔茜<a href="对战ai策略.html#对战ai阿尔茜" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>阿尔茜在电脑手上倒不会特别出彩，但是她有两个技能会让人比较头痛：一是天然对远程攻击有概率规避，包括特殊技里的远程攻击都可以脱身。有时相持中她冲过来或者重击撞过来，本来可以用两枪拦截并且痛击，结果她硬是强行规避反而打你一套！所以镇静精通还是要开起来。另外镇静精通在面对阿尔茜时有个bug：近战进攻阿尔茜时我方可能触发霸体。</p>
+<p>阿尔茜在电脑手上倒不会特别出彩，但是她有两个技能会让人比较头痛：一是天然对远程攻击有概率规避，包括特殊技里的远程攻击都可以脱身。有时相持中她冲过来或者重击撞过来，本来可以用两枪拦截并且痛击，结果她硬是强行规避反而打你一套！所以镇静精通还是要开起来。</p>
 <p>另一个头痛的就是S1之后的追身小枪，用正常的节奏闪容易被子弹擦到。所以平时多送她到S2，实在骗出S1，就尽量在近战距离缠斗。</p>
 <p><strong>S1：后，后或侧；S2：后，后</strong></p>
 <p>阿尔茜的S1因为自己就往后跳，所以几乎不会把人压在墙角，加上射击是斜角向下，所以只要离开射击点就能闪开，为了反击显然是侧闪比较划算。</p>
