--- a/chars_book/战士系.html
+++ b/chars_book/战士系.html
@@ -295,15 +295,20 @@
 <ul>
 <li>阿尔茜的小枪爆头流血能力是很经济的输出手段，尤其是抓准前冲对手打出多次爆头的时候简直血崩。被爆头流血的对手在侧闪和后闪时还会进一步加大伤害。</li>
 <li>各种暴击额外获得能量，让阿尔茜的气来得特别快。运气好的时候在S1的过程中打出一两个爆头，不但伤害爆炸，还可能又攒满下一个S1。</li>
-<li>阿尔茜面对远程攻击拥有天生的规避能力，甚至可以从特殊技中脱身，有时能让玩家受益，但作为电脑对手经常坑远程玩家，例如铁皮一个S2明明连上了，最后一发要抹杀的时候给你规避掉就呵呵了。然而你用阿尔茜面对铁皮的S2时，她给你规避前一发，后一发你死按着防也会吃下！通天晓的锤子因为要侧闪，阿尔茜也会给你规避掉。另外这个能力和“镇静”有点bug，开了镇静精通的人近战打阿尔茜有时自己就会触发霸体。</li>
-<li>S1后射速的提升让阿尔茜的枪有一种“追身”的效果，对方很难侧闪掉连续的两发子弹，这进一步加大了爆头的能力。</li>
-<li>S2在杀伤和实用性上比较鸡肋，抽出两把拉风的大刀，其中有一把只是用来平衡的…难怪伤害也低，偶尔需要物理攻击的时候可以考虑。</li>
-<li>由于S1优秀S2鸡肋，S3反倒成为了“一不小心涨到两格气又舍不得用S2”的较好补充。曾经S3的狙击在猩猩黄甲上打不出流血，后来好像修正正常了。</li>
+<li>阿尔茜面对远程攻击拥有天生的规避能力，甚至可以从特殊技和重击中脱身，有时能让玩家受益，但作为电脑对手经常坑远程玩家，例如铁皮一个S2明明连上了，最后一发要抹杀的时候给你规避掉就呵呵了。然而你用阿尔茜面对铁皮的S2时，她给你规避前一发，后一发你死按着防也会吃下！通天晓的锤子因为要侧闪，阿尔茜也会给你规避掉。另外这个能力和“镇静”有点bug，开了镇静精通的人近战打阿尔茜有时自己就会触发霸体。</li>
+<li>S1后射速的提升让阿尔茜的枪有一种“追身”的效果，对方很难侧闪掉连续的两发子弹，这进一步加大了爆头的能力。而且因为卡邦这个游戏的子弹判定“命中”是按判定框来算，所以有时电脑侧闪了也会挂流血</li>
+<li>S2在杀伤和实用性上比较鸡肋，抽出两把拉风的大刀，其中有一把砍人（另一把难道只是用来平衡双手的？）…难怪伤害也低，偶尔需要物理攻击的时候可以考虑。</li>
+<li>由于S1优秀S2鸡肋，S3反倒成为了“一不小心涨到两格气又舍不得用S2”的较好补充。曾经S3的狙击在猩猩黄甲上打不出流血，后来修正正常了。</li>
 </ul>
 </div>
 <div id="招牌-17" class="section level4 hasAnchor" number="5.3.1.2">
 <h4><span class="header-section-number">5.3.1.2</span> 招牌<a href="战士系.html#招牌-17" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>概率获得精准增益，加暴击率，阻止规避10秒。虽然是个看脸的招牌，但由于是100%治疗规避，所以阿尔茜在一个S1击倒路障后如果出了招牌，对方是无能为力的。而且初始概率就有45%左右，还是很有效的。</p>
+<p>2021年9月9日对这个招牌做了加强：</p>
+<ul>
+<li>S1和S2动画结束后才开始倒计时</li>
+<li>在招牌本身的概率之上，S2出招牌的概率提升10%，S3提升20%</li>
+</ul>
 </div>
 <div id="协同-17" class="section level4 hasAnchor" number="5.3.1.3">
 <h4><span class="header-section-number">5.3.1.3</span> 协同<a href="战士系.html#协同-17" class="anchor-section" aria-label="Anchor link to header"></a></h4>
