--- a/chars_book/战术系.html
+++ b/chars_book/战术系.html
@@ -639,7 +639,8 @@
 </div>
 <div id="短板-7" class="section level4 hasAnchor" number="3.8.1.4">
 <h4><span class="header-section-number">3.8.1.4</span> 短板<a href="战术系.html#短板-7" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>黑擎并没有太大短板，无非是没有战擎的高输出高爆发。另外相比战擎，黑擎的S3简直难堪大用。</p>
+<p>黑擎并没有太大短板，无非是没有战擎的高输出高爆发，这和他的招牌加一块，就把他定位在战斗时间较长的角色中了。另外相比战擎，黑擎的S3简直难堪大用。</p>
+<p>特别要注意别他的S2破甲，看描述是“驱散每一个护甲增益”，但是还有一行小字“要消耗3个黑暗能量”，真是有一种“全场9.99元——起（小字）”的无语。实战中面对敌人并不能像战擎那样一个S2砍瓜切菜高伤害。而伤害不高，偷回来的血也就少了。</p>
 </div>
 </div>
 <div id="推荐打法-7" class="section level3 hasAnchor" number="3.8.2">
