--- a/chars_book/index.html
+++ b/chars_book/index.html
@@ -191,13 +191,15 @@
 <div id="header">
 <h1 class="title">百炼为战全人物解析</h1>
 <p class="author"><em>公理天城翻译官</em></p>
-<p class="date"><em>更新时间：2022-04-18</em></p>
+<p class="date"><em>更新时间：2022-04-20</em></p>
 </div>
 <div id="更新与简介" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> 更新与简介<a href="index.html#更新与简介" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <div id="更新日志" class="section level2 hasAnchor" number="1.1">
 <h2><span class="header-section-number">1.1</span> 更新日志<a href="index.html#更新日志" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p><em>（只包含主要的更新，不含小修改）</em></p>
 <ul>
+<li>2022年4月20日：修订<a href="战士系.html#阿尔茜">阿尔茜</a>、<a href="侦查系.html#路障">路障</a>、<a href="战术系.html#暗黑擎天柱">暗黑擎天柱</a>和G1铁皮S2躲法。</li>
 <li>2022年4月18日：
 <ul>
 <li>新增<a href="对战ai策略.html#对战ai策略">对战AI策略</a>章节，分析所有角色电脑AI应对策略，包括所有S1、S2闪避方式。</li>
@@ -210,7 +212,7 @@
 <div id="更新预告" class="section level2 hasAnchor" number="1.2">
 <h2><span class="header-section-number">1.2</span> 更新预告<a href="index.html#更新预告" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
-<li>2022年4月：修正一些写得比较简略的早期角色。更新一些后续调整过的角色如阿尔茜、路障、天火。</li>
+<li>2022年4月：修正一些写得比较简略的早期角色。更新一些后续调整过的角色如天火。</li>
 </ul>
 </div>
 <div id="前言" class="section level2 hasAnchor" number="1.3">
